src/test/data/parse/errors/errors_in_items.rs
pub fn main() {
    say_hello(
}

#[test]
fn other() {
    again(;;
    println!("something")
}