src/test/data/parse/errors/errors_in_items.rs.errors
[rust.parse.message] 10-10:Parse error ; Encountered " ";" "; "" at line 7, column 11.
Was expecting one of:
    <STRING_LITERAL> ...
    <RAW_STRING_LITERAL> ...
    <CHAR_LITERAL> ...
    <NUMBER_LITERAL> ...
    <BYTE_LITERAL> ...
    <BYTE_STRING_LITERAL> ...
    <RAW_BYTE_STRING_LITERAL> ...
    "::" ...
    "(" ...
    "-" ...
    "*" ...
    "&" ...
    "!" ...
    "false" ...
    "for" ...
    "if" ...
    "loop" ...
    "return" ...
    "true" ...
    "while" ...
    <IDENTIFIER> ...
    <LABEL> ...
    
[rust.parse.message] 11-11:Parse error ; Encountered " ";" "; "" at line 7, column 12.
Was expecting one of:
    <STRING_LITERAL> ...
    <RAW_STRING_LITERAL> ...
    <CHAR_LITERAL> ...
    <NUMBER_LITERAL> ...
    <BYTE_LITERAL> ...
    <BYTE_STRING_LITERAL> ...
    <RAW_BYTE_STRING_LITERAL> ...
    "::" ...
    "(" ...
    "{" ...
    "-" ...
    "*" ...
    "&" ...
    "!" ...
    "continue" ...
    "false" ...
    "for" ...
    "if" ...
    "let" ...
    "loop" ...
    "return" ...
    "true" ...
    "while" ...
    <IDENTIFIER> ...
    <LABEL> ...
    "let" ...
    "!" ...
    "-" ...
    "*" ...
    "&" ...
    "return" ...
    "return" ...
    "(" ...
    <STRING_LITERAL> ...
    <RAW_STRING_LITERAL> ...
    <CHAR_LITERAL> ...
    <NUMBER_LITERAL> ...
    "true" ...
    "false" ...
    <BYTE_LITERAL> ...
    <BYTE_STRING_LITERAL> ...
    <RAW_BYTE_STRING_LITERAL> ...
    "if" ...
    <LABEL> ...
    "while" ...
    "for" ...
    "loop" ...
    "::" ...
    <IDENTIFIER> ...
    "{" ...
    "continue" ...
    
[rust.parse.message] 14-14:Parse error ; Encountered " "}" "} "" at line 3, column 1.
Was expecting one of:
    <STRING_LITERAL> ...
    <RAW_STRING_LITERAL> ...
    <CHAR_LITERAL> ...
    <NUMBER_LITERAL> ...
    <BYTE_LITERAL> ...
    <BYTE_STRING_LITERAL> ...
    <RAW_BYTE_STRING_LITERAL> ...
    "::" ...
    "(" ...
    "-" ...
    "*" ...
    "&" ...
    "!" ...
    "false" ...
    "for" ...
    "if" ...
    "loop" ...
    "return" ...
    "true" ...
    "while" ...
    <IDENTIFIER> ...
    <LABEL> ...
    
